--- a/src/styles/listingDocuments.scss
+++ b/src/styles/listingDocuments.scss
@@ -1,13 +1,5 @@
 .listing-docs {
-    img {
-        width: 45px;
-        height: 45px;
-        position: relative;
-        background: #ffff;
-        z-index: 2;
-    }
-
-    a {
+    .download-doc {
         outline: 1px solid gray;
         padding: 5px 10px 10px 10px;
         position: absolute;
@@ -17,29 +9,6 @@
         z-index: 1;
         span {
             margin-left: 10px;
-        }
-    }
-
-    .fileUpload-dropzone-wrapper {
-        width: 25%;
-        text-align: center;
-        .mt-3 {
-            margin: 0 !important;
-        }
-        .fileUpload-actions {
-            margin-left: 0;
-            margin-top: 0;
-            padding: 0.5em;
-            display: flex;
-            align-items: center;
-
-            p {
-                margin-left: 1em;
-            }
-        }
-        .text-primary {
-            font-size: 0.5em;
-            margin: auto;
         }
     }
 }
