--- a/src/styles/listingDocuments.scss
+++ b/src/styles/listingDocuments.scss
@@ -11,4 +11,9 @@
             margin-left: 10px;
         }
     }
+    .upload-container {
+        width: 20%;
+        margin: 0 1em;
+        margin-bottom: 1em;
+    }
 }
