--- a/src/styles/listingDocuments.scss
+++ b/src/styles/listingDocuments.scss
@@ -16,4 +16,38 @@
         margin: 0 1em;
         margin-bottom: 1em;
     }
+
+    .doc-sign-icon {
+        width: 25px;
+        height: 25px;
+        margin-right: 1em;
+    }
+
+    .user-doc-container {
+        margin-left: 2em;
+        color: #5665c0;
+
+        p {
+            display: flex;
+            margin-right: 1em;
+
+            .material-icons {
+                margin-left: 1em;
+            }
+        }
+    }
+
+    .user-doc-container.incomplete {
+        &:hover {
+            cursor: pointer;
+            opacity: 0.7;
+        }
+    }
+
+    .user-doc-container.completed {
+        &:hover {
+            cursor: pointer;
+            opacity: 1;
+        }
+    }
 }
