--- a/src/styles/offers.css
+++ b/src/styles/offers.css
@@ -2,16 +2,19 @@
   width: 35%;
   position: relative;
   display: flex; }
+  .offers-download p {
+    color: #3c4046; }
 
 img:hover {
   cursor: pointer; }
 
 .offers-user-doc {
   border: 1px solid #a2aab6;
-  padding: 0.25em 1.5em 0.35em 3em;
+  padding: 0em 0.5em 0 1.25em;
   position: absolute;
-  left: 30px;
-  top: 20px; }
+  left: 17px;
+  top: 7px;
+  display: flex; }
   .offers-user-doc:hover {
     cursor: pointer; }
 
@@ -25,8 +28,8 @@ img:hover {
   z-index: 1;
   width: 30px;
   height: 20px;
-  left: 29px;
-  top: 5px; }
+  left: 3px;
+  top: 3px; }
 
 .counter-offer-link {
   margin-left: 2em; }
