--- a/src/styles/offers.scss
+++ b/src/styles/offers.scss
@@ -2,6 +2,9 @@
     width: 35%;
     position: relative;
     display: flex;
+    p {
+        color: #3c4046;
+    }
 }
 
 img {
@@ -12,11 +15,11 @@ img {
 
 .offers-user-doc {
     border: 1px solid #a2aab6;
-    padding: 0.25em 1.5em 0.35em 3em;
+    padding: 0em 0.5em 0 1.25em;
     position: absolute;
-    left: 30px;
-    top: 20px;
-
+    left: 17px;
+    top: 7px;
+    display: flex;
     &:hover {
         cursor: pointer;
     }
@@ -33,8 +36,8 @@ img {
     z-index: 1;
     width: 30px;
     height: 20px;
-    left: 29px;
-    top: 5px;
+    left: 3px;
+    top: 3px;
 }
 
 .counter-offer-link {
