--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,15 +1,19 @@
 md-dialog {
-    max-height : 300px !important;
+    max-height: 300px !important;
 }
 .row {
-  margin-right: 0px !important;
-  margin-left: 0px !important;
+    margin-right: 0px !important;
+    margin-left: 0px !important;
 }
 
 body {
-  position: relative;
+    position: relative;
+    background-image: linear-gradient(to bottom right, #5ed2d2, #5665c0);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
-
-
-
-
